Final setup commit. Removes whitespace bug in pdf and adds a simple header. The date is always that of the last compile.

--- a/constitution.css
+++ b/constitution.css
@@ -1,5 +1,7 @@
  
 /* start css.sty */
+.ecrm-1728{font-size:170%;}
+.ecrm-1200{font-size:120%;}
 p.noindent { text-indent: 0em }
 td p.noindent { text-indent: 0em; margin-top:0em; }
 p.nopar { text-indent: 0em; }
